# renderer_in_rust

./: Cargo.toml  data.ron
src/: main.rs  rtracer.rs
src/rtracer/: camera.rs  helper.rs  hitinfo.rs  light.rs  material.rs  parser.rs  raycast_info.rs  renderer.rs  scene.rs  scene_object.rs  shape.rs
