[package]
name = "test_project"
version = "0.1.0"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.21.1"
nalgebra = "0.18"
# num = "0.2.0"
rand = "0.6.5"
itertools = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum_dispatch = "0.1"