[package]
name = "test_project"
version = "0.1.0"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.21"
nalgebra = {version ="0.18", features = ["serde-serialize"]}
custom_error = "1.7"
rand = "0.7"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.5"
enum_dispatch = "0.1"
assert_approx_eq = "1.1"
rand_distr = "0.2"